--- a/report/contracts/auction-handler/FastLaneAuctionHandler.sol.func.html
+++ b/report/contracts/auction-handler/FastLaneAuctionHandler.sol.func.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">93</td>
-            <td class="headerCovTableEntry">125</td>
-            <td class="headerCovTableEntryLo">74.4 %</td>
+            <td class="headerCovTableEntry">99</td>
+            <td class="headerCovTableEntry">130</td>
+            <td class="headerCovTableEntryMed">76.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-08-29 04:40:03</td>
+            <td class="headerValue">2023-09-07 01:01:29</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">20</td>
-            <td class="headerCovTableEntry">25</td>
-            <td class="headerCovTableEntryMed">80.0 %</td>
+            <td class="headerCovTableEntry">23</td>
+            <td class="headerCovTableEntry">26</td>
+            <td class="headerCovTableEntryMed">88.5 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">43</td>
-            <td class="headerCovTableEntry">68</td>
-            <td class="headerCovTableEntryLo">63.2 %</td>
+            <td class="headerCovTableEntry">45</td>
+            <td class="headerCovTableEntry">66</td>
+            <td class="headerCovTableEntryLo">68.2 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,103 +69,107 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="FastLaneAuctionHandler.sol.func-sort-c.html"><img src="../../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#369">FastLaneAuctionHandler.</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#446">FastLaneAuctionHandler.</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#282">FastLaneAuctionHandler._handleBalances</a></td>
-              <td class="coverFnHi">5</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#297">FastLaneAuctionHandler._handleBalancesFast</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#338">FastLaneAuctionHandler._handleBalancesWithRefundAndEmit</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#656">FastLaneAuctionHandler._validateValidator</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#422">FastLaneAuctionHandler.collectFees</a></td>
-              <td class="coverFnHi">7</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#196">FastLaneAuctionHandler.fastBidWrapper</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#510">FastLaneAuctionHandler.getValidator</a></td>
-              <td class="coverFnHi">17</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#494">FastLaneAuctionHandler.getValidatorBalance</a></td>
-              <td class="coverFnHi">5</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#499">FastLaneAuctionHandler.getValidatorPayee</a></td>
-              <td class="coverFnHi">8</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#506">FastLaneAuctionHandler.getValidatorRecipient</a></td>
-              <td class="coverFnHi">3</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#521">FastLaneAuctionHandler.humanizeError</a></td>
-              <td class="coverFnHi">4</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#480">FastLaneAuctionHandler.isPayeeTimeLocked</a></td>
-              <td class="coverFnHi">3</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#484">FastLaneAuctionHandler.isValidPayee</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#231">FastLaneAuctionHandler.payValidatorFee</a></td>
-              <td class="coverFnHi">13</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#248">FastLaneAuctionHandler.simulateFlashBid</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#527">FastLaneAuctionHandler.slice</a></td>
-              <td class="coverFnHi">8</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#176">FastLaneAuctionHandler.submitFastBid</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#105">FastLaneAuctionHandler.submitFlashBid</a></td>
-              <td class="coverFnHi">16</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#142">FastLaneAuctionHandler.submitFlashBidWithRefund</a></td>
-              <td class="coverFnHi">8</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#378">FastLaneAuctionHandler.syncStuckNativeToken</a></td>
-              <td class="coverFnHi">3</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#441">FastLaneAuctionHandler.updateValidatorPayee</a></td>
-              <td class="coverFnHi">14</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#467">FastLaneAuctionHandler.updateValidatorRefundShare</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#488">FastLaneAuctionHandler.validatorPayee</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#359">FastLaneAuctionHandler._handleBalances</a></td>
               <td class="coverFnHi">6</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#401">FastLaneAuctionHandler.withdrawStuckERC20</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#374">FastLaneAuctionHandler._handleBalancesFast</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#415">FastLaneAuctionHandler._handleBalancesWithRefundAndEmit</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#678">FastLaneAuctionHandler._validateValidator</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#544">FastLaneAuctionHandler.clearValidatorPayee</a></td>
+              <td class="coverFnHi">4</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#498">FastLaneAuctionHandler.collectFees</a></td>
+              <td class="coverFnHi">9</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#255">FastLaneAuctionHandler.fastBidWrapper</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#607">FastLaneAuctionHandler.getValidator</a></td>
+              <td class="coverFnHi">31</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#585">FastLaneAuctionHandler.getValidatorBalance</a></td>
+              <td class="coverFnHi">5</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#595">FastLaneAuctionHandler.getValidatorBlockOfLastWithdraw</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#590">FastLaneAuctionHandler.getValidatorPayee</a></td>
+              <td class="coverFnHi">8</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#602">FastLaneAuctionHandler.getValidatorRecipient</a></td>
+              <td class="coverFnHi">12</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#571">FastLaneAuctionHandler.isPayeeTimeLocked</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#575">FastLaneAuctionHandler.isValidPayee</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#231">FastLaneAuctionHandler.payValidatorCustom</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#299">FastLaneAuctionHandler.payValidatorFee</a></td>
+              <td class="coverFnHi">19</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#316">FastLaneAuctionHandler.simulateFlashBid</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#210">FastLaneAuctionHandler.submitFastBid</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#121">FastLaneAuctionHandler.submitFlashBid</a></td>
+              <td class="coverFnHi">17</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#167">FastLaneAuctionHandler.submitFlashBidWithRefund</a></td>
+              <td class="coverFnHi">8</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#455">FastLaneAuctionHandler.syncStuckNativeToken</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#518">FastLaneAuctionHandler.updateValidatorPayee</a></td>
+              <td class="coverFnHi">27</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#558">FastLaneAuctionHandler.updateValidatorRefundShare</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#579">FastLaneAuctionHandler.validatorPayee</a></td>
+              <td class="coverFnHi">16</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#478">FastLaneAuctionHandler.withdrawStuckERC20</a></td>
               <td class="coverFnHi">3</td>
             </tr>
   </table>
