--- a/report/contracts/auction-handler/index-sort-f.html
+++ b/report/contracts/auction-handler/index-sort-f.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">93</td>
-            <td class="headerCovTableEntry">125</td>
-            <td class="headerCovTableEntryLo">74.4 %</td>
+            <td class="headerCovTableEntry">99</td>
+            <td class="headerCovTableEntry">130</td>
+            <td class="headerCovTableEntryMed">76.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-08-29 04:40:03</td>
+            <td class="headerValue">2023-09-07 01:01:29</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">20</td>
-            <td class="headerCovTableEntry">25</td>
-            <td class="headerCovTableEntryMed">80.0 %</td>
+            <td class="headerCovTableEntry">23</td>
+            <td class="headerCovTableEntry">26</td>
+            <td class="headerCovTableEntryMed">88.5 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">43</td>
-            <td class="headerCovTableEntry">68</td>
-            <td class="headerCovTableEntryLo">63.2 %</td>
+            <td class="headerCovTableEntry">45</td>
+            <td class="headerCovTableEntry">66</td>
+            <td class="headerCovTableEntryLo">68.2 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -84,14 +84,14 @@
     <tr>
       <td class="coverFile"><a href="FastLaneAuctionHandler.sol.gcov.html">FastLaneAuctionHandler.sol</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../../ruby.png" width=74 height=10 alt="74.4%"><img src="../../snow.png" width=26 height=10 alt="74.4%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../../amber.png" width=76 height=10 alt="76.2%"><img src="../../snow.png" width=24 height=10 alt="76.2%"></td></tr></table>
       </td>
-      <td class="coverPerLo">74.4&nbsp;%</td>
-      <td class="coverNumLo">93 / 125</td>
-      <td class="coverPerMed">80.0&nbsp;%</td>
-      <td class="coverNumMed">20 / 25</td>
-      <td class="coverPerLo">63.2&nbsp;%</td>
-      <td class="coverNumLo">43 / 68</td>
+      <td class="coverPerMed">76.2&nbsp;%</td>
+      <td class="coverNumMed">99 / 130</td>
+      <td class="coverPerMed">88.5&nbsp;%</td>
+      <td class="coverNumMed">23 / 26</td>
+      <td class="coverPerLo">68.2&nbsp;%</td>
+      <td class="coverNumLo">45 / 66</td>
     </tr>
   </table>
   </center>
