--- a/report/index.html
+++ b/report/index.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">315</td>
-            <td class="headerCovTableEntry">505</td>
-            <td class="headerCovTableEntryLo">62.4 %</td>
+            <td class="headerCovTableEntry">326</td>
+            <td class="headerCovTableEntry">515</td>
+            <td class="headerCovTableEntryLo">63.3 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-08-29 04:40:03</td>
+            <td class="headerValue">2023-09-07 01:01:29</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">76</td>
-            <td class="headerCovTableEntry">108</td>
-            <td class="headerCovTableEntryLo">70.4 %</td>
+            <td class="headerCovTableEntry">80</td>
+            <td class="headerCovTableEntry">110</td>
+            <td class="headerCovTableEntryLo">72.7 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">125</td>
-            <td class="headerCovTableEntry">216</td>
-            <td class="headerCovTableEntryLo">57.9 %</td>
+            <td class="headerCovTableEntry">127</td>
+            <td class="headerCovTableEntry">214</td>
+            <td class="headerCovTableEntryLo">59.3 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -96,14 +96,14 @@
     <tr>
       <td class="coverFile"><a href="contracts/auction-handler/index.html">contracts/auction-handler</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=74 height=10 alt="74.4%"><img src="snow.png" width=26 height=10 alt="74.4%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=76 height=10 alt="76.2%"><img src="snow.png" width=24 height=10 alt="76.2%"></td></tr></table>
       </td>
-      <td class="coverPerLo">74.4&nbsp;%</td>
-      <td class="coverNumLo">93 / 125</td>
-      <td class="coverPerMed">80.0&nbsp;%</td>
-      <td class="coverNumMed">20 / 25</td>
-      <td class="coverPerLo">63.2&nbsp;%</td>
-      <td class="coverNumLo">43 / 68</td>
+      <td class="coverPerMed">76.2&nbsp;%</td>
+      <td class="coverNumMed">99 / 130</td>
+      <td class="coverPerMed">88.5&nbsp;%</td>
+      <td class="coverNumMed">23 / 26</td>
+      <td class="coverPerLo">68.2&nbsp;%</td>
+      <td class="coverNumLo">45 / 66</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="contracts/helpers/index.html">contracts/helpers</a></td>
@@ -200,6 +200,18 @@
       <td class="coverNumLo">0 / 3</td>
       <td class="coverPerLo">0.0&nbsp;%</td>
       <td class="coverNumLo">0 / 2</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="test/mocks/index.html">test/mocks</a></td>
+      <td class="coverBar" align="center">
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=100 height=10 alt="100.0%"></td></tr></table>
+      </td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">5 / 5</td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">1 / 1</td>
+      <td class="coverPerHi">-</td>
+      <td class="coverNumHi">0 / 0</td>
     </tr>
   </table>
   </center>
